unit_tests/regression.suite/cast-checks-3.err
(list)-[1,2,3,4,5];
       ^
(Line 3 char 8): ERROR: Syntax error
